--- a/poster.tex
+++ b/poster.tex
@@ -60,8 +60,8 @@
 \tikzstyle{na} = [baseline=-.5ex]
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
-\title[Fancy  Posters]{Rate-Agnostic (Causal) Structure Learning}  \author[Plis et
-al.]{S. M. Plis, D. Danks, C. Freeman,  V. D.  Calhoun} \institute[]{  Carnegie Mellon University,  The
+\title[Fancy  Posters]{Successfully learning networks from undersampled neuroimaging data}  \author[Plis et
+al.]{S. M. Plis, D. Danks, A. Caprihan C. Freeman,  V. D.  Calhoun} \institute[]{  Carnegie Mellon University,  The
   Mind Research Network}
   %\date{}
 
@@ -71,37 +71,43 @@ al.]{S. M. Plis, D. Danks, C. Freeman,  V. D.  Calhoun} \institute[]{  Carnegie 
     \begin{columns}[t]
       \begin{column}{.48\linewidth}
         \begin{block}{\Large Abstract}
-          \raggedright Causal structure learning from time series data is a major scientific challenge.  Existing algorithms assume that measurements occur sufficiently quickly; more precisely, they assume that the system and measurement timescales are approximately equal. In many scientific domains, however, measurements occur at a significantly slower rate than the underlying system changes.  Moreover, the size of the mismatch between timescales is often unknown. We present three distinct causal structure learning algorithms, all of which discover all dynamic graphs that could explain the observed measurement data as arising from undersampling at some rate. That is, these algorithms all learn causal structure without assuming any particular relation between the measurement and system timescales; they are thus rate-agnostic. We apply these algorithms to data from simulations. The results provide insight into the challenge of undersampling.
+          \raggedright Abstract here
         \end{block}
         \begin{block}{\Large Representation}
           \raggedright 
           \begin{itemize}
           \item  Describe the problem
-          \item 
+          \item  NOTE: do not forget UNM and CMU logo (already added to logo folder but not sure where to place in poster)
           \item 
           \end{itemize}
         \end{block}
-        \begin{block}{\Large Algorithms}
+        \begin{block}{\Large Algorithm}
           \raggedright  
           \begin{itemize}
-          \item Recursive
-          \item Iterative edgecentric
-          \item Iterative loopcentric
-          \item Would it be easier just to place the pseudocode for each algorithm here?
+          \item Which do we choose? 3 to choose from RASL and 3 to choose from MSL
+          \item Would it be easier just to place the pseudocode here?
           \end{itemize}
         \end{block}
   
 
       \end{column}
       \begin{column}{.48\linewidth}
-        \begin{block}{\Large Results}
+        \begin{block}{\Large Simulated Data}
           \raggedright Talk about results and include pictures: \vskip5cm
           \begin{tikzpicture}[overlay]
-            \node[xshift=19cm] {\includegraphics[width=1\linewidth]{systemfig}};
+            \node[xshift=19cm] {\includegraphics[width=1\linewidth]{eqclass_size}};
           \end{tikzpicture}
           \vskip5.5cm
         \end{block}
         
+        \begin{block}{\Large FMRI Data}
+          \raggedright Talk about results and include pictures: \vskip5cm
+          \begin{tikzpicture}[overlay]
+            \node[xshift=19cm] {\includegraphics[width=1\linewidth]{eqclass_size}};
+          \end{tikzpicture}
+          \vskip5.5cm
+        \end{block}
+
         \begin{block}{\Large Conclusions}
           \raggedright Conclude stuff here
         \end{block}
