latest pretty sections

--- a/poster.tex
+++ b/poster.tex
@@ -61,7 +61,7 @@
 
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \title[Fancy  Posters]{Successfully learning networks from undersampled neuroimaging data}  \author[Plis et
-al.]{S. M. Plis, D. Danks, A. Caprihan C. Freeman,  V. D.  Calhoun} \institute[]{  Carnegie Mellon University,  The
+al.]{D. Danks, S.M. Plis, C. Freeman, A. Caprihan, V. D.  Calhoun} \institute[]{  Carnegie Mellon University,  The
   Mind Research Network}
   %\date{}
 
@@ -73,7 +73,7 @@ al.]{S. M. Plis, D. Danks, A. Caprihan C. Freeman,  V. D.  Calhoun} \institute[]
         \begin{block}{\Large Abstract}
           \raggedright Abstract here
         \end{block}
-        \begin{block}{\Large Representation}
+        \begin{block}{\Large Problems with ``Granger Causality''}
           \raggedright 
           \begin{itemize}
           \item  Describe the problem
@@ -81,30 +81,26 @@ al.]{S. M. Plis, D. Danks, A. Caprihan C. Freeman,  V. D.  Calhoun} \institute[]
           \item 
           \end{itemize}
         \end{block}
-        \begin{block}{\Large Algorithm}
+        \begin{block}{\Large How to Overcome the Problems}
           \raggedright  
           \begin{itemize}
-          \item Which do we choose? 3 to choose from RASL and 3 to choose from MSL
-          \item Would it be easier just to place the pseudocode here?
+          \item put figure 1 here and describe succinctly 
           \end{itemize}
         \end{block}
   
 
       \end{column}
       \begin{column}{.48\linewidth}
-        \begin{block}{\Large Simulated Data}
+        \begin{block}{\Large Synthetic Data}
           \raggedright Talk about results and include pictures: \vskip5cm
-          \begin{tikzpicture}[overlay]
-            \node[xshift=19cm] {\includegraphics[width=1\linewidth]{eqclass_size}};
-          \end{tikzpicture}
+          %\begin{tikzpicture}[overlay]
+          %  \node[xshift=19cm] {\includegraphics[width=1\linewidth]{eqclass_size}};
+          %\end{tikzpicture}
           \vskip5.5cm
         \end{block}
         
         \begin{block}{\Large FMRI Data}
           \raggedright Talk about results and include pictures: \vskip5cm
-          \begin{tikzpicture}[overlay]
-            \node[xshift=19cm] {\includegraphics[width=1\linewidth]{eqclass_size}};
-          \end{tikzpicture}
           \vskip5.5cm
         \end{block}
 
