most recent version

--- a/poster.tex
+++ b/poster.tex
@@ -69,7 +69,7 @@
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
 \title[Fancy  Posters]{Successfully learning networks from undersampled neuroimaging data}  
 \author[Plis et
-al.]{D. Danks, S.M. Plis, C. Freeman, A. Caprihan, Eswar Damaraju, V. D.  Calhoun} \institute[]{  Carnegie Mellon University,  The
+al.]{D. Danks, S.M. Plis, C. Freeman, A. Caprihan, E. Damaraju, V. D.  Calhoun} \institute[]{  Carnegie Mellon University,  The
   Mind Research Network}
   %\date{}
 
@@ -83,7 +83,7 @@ al.]{D. Danks, S.M. Plis, C. Freeman, A. Caprihan, Eswar Damaraju, V. D.  Calhou
           \begin{itemize}
             \item Many structure learning algorithms are based on Granger causality
             \item Granger causality is unreliable given undersampled time series data
-            \item We developed RASL to learn structure from undersampled data
+            \item We developed RASL (rate-agnostic structure learning) to learn structure from undersampled data
             \item In simulated data, RASL algorithms reveal causal timescale structure 
               and improved measurement timescale learning 
             \item RASL algorithms provide additional insight on fMRI data
